docs-archive/apache-airflow-providers-amazon/9.29.0/_sources/_api/airflow/providers/amazon/aws/operators/s3_vectors/index.rst.txt
airflow.providers.amazon.aws.operators.s3_vectors
=================================================

.. py:module:: airflow.providers.amazon.aws.operators.s3_vectors

.. autoapi-nested-parse::

   Amazon S3 Vectors operators.



Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.s3_vectors.S3VectorsCreateVectorBucketOperator
   airflow.providers.amazon.aws.operators.s3_vectors.S3VectorsDeleteVectorBucketOperator
   airflow.providers.amazon.aws.operators.s3_vectors.S3VectorsCreateIndexOperator
   airflow.providers.amazon.aws.operators.s3_vectors.S3VectorsDeleteIndexOperator
   airflow.providers.amazon.aws.operators.s3_vectors.S3VectorsPutVectorsOperator
   airflow.providers.amazon.aws.operators.s3_vectors.S3VectorsQueryVectorsOperator


Module Contents
---------------

.. py:class:: S3VectorsCreateVectorBucketOperator(*, vector_bucket_name, encryption_configuration = None, tags = None, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Create an Amazon S3 Vectors vector bucket.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3VectorsCreateVectorBucketOperator`

   :param vector_bucket_name: The name of the vector bucket to create (3-63 chars).
   :param encryption_configuration: Optional encryption config dict with keys
       ``sseType`` (``AES256`` or ``aws:kms``) and optionally ``kmsKeyArn``.
   :param tags: Optional dict of tags to apply to the vector bucket.
   :param if_exists: Behavior when the bucket already exists.
       ``"fail"`` raises an error, ``"skip"`` returns the existing bucket ARN.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: vector_bucket_name


   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: tags
      :value: None



   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3VectorsDeleteVectorBucketOperator(*, vector_bucket_name, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Delete an Amazon S3 Vectors vector bucket.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3VectorsDeleteVectorBucketOperator`

   :param vector_bucket_name: The name of the vector bucket to delete.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: vector_bucket_name


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3VectorsCreateIndexOperator(*, vector_bucket_name, index_name, data_type, dimension, distance_metric = 'cosine', metadata_configuration = None, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Create an index in an Amazon S3 Vectors vector bucket.

   An index stores vectors and supports similarity search queries.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3VectorsCreateIndexOperator`

   :param vector_bucket_name: The name of the vector bucket. (templated)
   :param index_name: The name of the index to create. (templated)
   :param data_type: The data type for vectors (e.g. ``float32``). (templated)
   :param dimension: The number of dimensions for each vector.
   :param distance_metric: The distance metric for similarity search (e.g. ``cosine``, ``euclidean``).
   :param metadata_configuration: Optional metadata configuration dict.
   :param if_exists: Behavior when the index already exists.
       ``"fail"`` raises an error, ``"skip"`` returns the existing index ARN.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: vector_bucket_name


   .. py:attribute:: index_name


   .. py:attribute:: data_type


   .. py:attribute:: dimension


   .. py:attribute:: distance_metric
      :value: 'cosine'



   .. py:attribute:: metadata_configuration
      :value: None



   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3VectorsDeleteIndexOperator(*, vector_bucket_name, index_name, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Delete an index from an Amazon S3 Vectors vector bucket.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3VectorsDeleteIndexOperator`

   :param vector_bucket_name: The name of the vector bucket. (templated)
   :param index_name: The name of the index to delete. (templated)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: vector_bucket_name


   .. py:attribute:: index_name


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3VectorsPutVectorsOperator(*, vector_bucket_name, index_name, vectors, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Insert vectors into an Amazon S3 Vectors index.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3VectorsPutVectorsOperator`

   :param vector_bucket_name: The name of the vector bucket. (templated)
   :param index_name: The name of the index. (templated)
   :param vectors: List of vector dicts, each with ``key``, ``data``, and optional ``metadata``. (templated)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: vector_bucket_name


   .. py:attribute:: index_name


   .. py:attribute:: vectors


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3VectorsQueryVectorsOperator(*, vector_bucket_name, index_name, top_k, query_vector, filter = None, return_metadata = True, return_distance = True, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Query vectors by similarity in an Amazon S3 Vectors index.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3VectorsQueryVectorsOperator`

   :param vector_bucket_name: The name of the vector bucket. (templated)
   :param index_name: The name of the index. (templated)
   :param top_k: The number of results to return.
   :param query_vector: The query vector dict (e.g. ``{"float32": [0.1, 0.2, ...]}``)
   :param filter: Optional filter expression dict.
   :param return_metadata: Whether to return metadata with results.
   :param return_distance: Whether to return distance scores.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  tuple[str, Ellipsis]


   .. py:attribute:: vector_bucket_name


   .. py:attribute:: index_name


   .. py:attribute:: top_k


   .. py:attribute:: query_vector


   .. py:attribute:: filter
      :value: None



   .. py:attribute:: return_metadata
      :value: True



   .. py:attribute:: return_distance
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



